--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "styled-components": "^6.1.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
