--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@types/lodash": "^4.14.202",
     "@types/react-modal": "^3.16.3",
     "axios": "^1.6.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.1",
+    "styled-components": "^6.1.11",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
