--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "@types/lodash": "^4.14.202",
     "@types/react-modal": "^3.16.3",
     "axios": "^1.6.2",
