--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-flatpickr": "^3.8.11",
     "@types/react-modal": "^3.16.3",
     "axios": "^1.6.2",
+    "dompurify": "^3.1.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +35,7 @@
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
