--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-flatpickr": "^3.10.13",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.0",
+    "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "vite-plugin-svgr": "^4.2.0"
   },
@@ -39,6 +41,7 @@
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
