--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.0",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
