--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-helmet-async": "^2.0.5",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.0",
     "react-slick": "^0.30.2",
