--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-modal": "^3.16.3",
     "axios": "^1.6.2",
     "dompurify": "^3.1.6",
+    "linkify-it": "^5.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
