--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-flatpickr": "^3.10.13",
     "react-helmet-async": "^2.0.5",
     "react-modal": "^3.16.1",
+    "react-notion": "^0.10.0",
     "react-router-dom": "^6.21.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
